# metisub

./: Ave_mujica_vostfr_ep02_QCHECKDONE.ass  Cargo.toml  [Team Arcedo] BanG Dream! Ave Mujica - 10 VOSTFR.ass  [Team Arcedo] BanG Dream! Ave Mujica - 11 VOSTFR.ass  build.rs
assets/models/kasane_teto/: tetokasane.mtl
kasane_teto/: readme.txt
shaders/fragment_shaders/: basic.frag
shaders/vertex_shaders/: basic.vert
src/: game_core.rs  lib.rs  main.rs  model.rs  objects.rs  resources.rs  shader.wgsl  shader_2.wgsl  texture.rs
src/parser/: mod.rs
src/ui/: mod.rs
