[package]
name = "metisub"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

[dependencies]
cgmath = "0.18"
cfg-if = "1"
winit = { version = "0.30.8", features = ["android-native-activity"] }
bytemuck = { version = "1.16", features = [ "derive" ] }
env_logger = "0.11"
log = "0.4"
wgpu = "25.0.0"
pollster = "0.4"
anyhow = "1.0.100"
tobj = {version="3.2", default-features = false, features = ["async"]}

[dependencies.image]
version =  "0.24"
default-features = false
features = ["png", "jpeg", "gif"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
